2007-08-26  Paolo Borelli  <pborelli@katamail.com>

	* plugins/snippets/snippets/Manager.py:
	* gedit/gedit-window.c:
	* gedit/gedit-document.c:

	Adapt to GtkSourceView api changes.

2007-08-26  Paolo Borelli  <pborelli@katamail.com>

	* plugins/modelines/modeline-parser.c:
	* plugins/indent/gedit-indent-plugin.c:
	* plugins/externaltools/tools/manager.py:
	* plugins/snippets/snippets/Manager.py:
	* plugins/snippets/snippets/Snippet.py:
	* gedit/gedit-print.c:
	* gedit/gtksourceprintjob.c:
	* gedit/gedit-window.c:
	* gedit/gedit-view.c:
	* gedit/gedit-document.c:
	* gedit/gedit-prefs-manager-app.c:

	Adapt to GtkSourceView api changes.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-utils.c: escape slashes when selecting text and
	searching for it in the document. Fixes bug #443956.

2007-08-23  Paolo Borelli  <pborelli@katamail.com>

	* plugins/filebrowser/gedit-file-bookmarks-store.c: use
	g_get_user_special_dir to get the Desktop and Documents dirs.

2007-08-21  Paolo Borelli  <pborelli@katamail.com>

	* plugins/filebrowser/gedit-file-browser-plugin.c:
	* gedit/dialogs/gedit-preferences-dialog.c:
	* gedit/gedit-languages-manager.c:
	* gedit/gedit-prefs-manager-app.c:

	Fix a some minor memory leaks.

2007-08-21  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c: Use gdk_atom_intern_static_string.

2007-08-16  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-ui.h: Use new document-page-setup icon. Fixes bug #450946.
	Patch by Michael Monreal <infernux@web.de>
	
2007-08-16  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-window.c (language_toggled),
	(create_language_menu_item), (create_languages_menu),
	(update_languages_menu): use language id instead of language name
	as action name in the languages menu. Fixes bug #462597.

2007-08-16  Paolo Maggi  <paolo@gnome.org>

	* MAINTAINERS: Follow new format regulations.
	
=== gedit 2.19.90 ===

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:
