@@ -307,8 +307,8 @@ gedit_view_init (GeditView *view)
 		      "auto_indent", gedit_prefs_manager_get_auto_indent (),
 		      "tab_width", gedit_prefs_manager_get_tabs_size (),
 		      "insert_spaces_instead_of_tabs", gedit_prefs_manager_get_insert_spaces (),
-		      "show_margin", gedit_prefs_manager_get_display_right_margin (), 
-		      "margin", gedit_prefs_manager_get_right_margin_position (),
+		      "show_right_margin", gedit_prefs_manager_get_display_right_margin (), 
+		      "right_margin_position", gedit_prefs_manager_get_right_margin_position (),
 		      "highlight_current_line", gedit_prefs_manager_get_highlight_current_line (),
 		      "smart_home_end", gedit_prefs_manager_get_smart_home_end (),
 		      "indent_on_tab", TRUE,
