@@ -1,3 +1,13 @@
+2007-08-27  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit/gedit-prefs-manager-app.c
+	(gedit_prefs_manager_right_margin_changed):
+	* gedit/gedit-view.c (gedit_view_init):
+	* plugins/modelines/modeline-parser.c (apply_modeline):
+	* plugins/snippets/snippets/Manager.py:
+	
+	Adapt to GtkSourceView api changes.
+
 2007-08-26  Paolo Borelli  <pborelli@katamail.com>
 
 	* plugins/snippets/snippets/Manager.py:
